# JoyDirectXWork

./: .gitignore  CMakeLists.txt  README.md
CMake/: CMakeMacro.cmake
DirectXWork/Demo01_DXHelloWindow/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo01_DXHelloWindow/Source/: Main.cpp
DirectXWork/Demo01_DXHelloWindow/Source/DXWorkHelloWindow/: D3D12HelloWindow.cpp  D3D12HelloWindow.h  IMGuiHelloWindow.cpp  IMGuiHelloWindow.h
DirectXWork/Demo02_DXHelloCube/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo02_DXHelloCube/Source/: Main.cpp  stdafx.h
DirectXWork/Demo02_DXHelloCube/Source/DXWorkHelloCube/: D3D12HelloCube.cpp  D3D12HelloCube.h  HelloCubeShader.hlsl  IMGuiHelloCube.cpp  IMGuiHelloCube.h
DirectXWork/Demo02_DXHelloTriangle/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo02_DXHelloTriangle/Source/: Main.cpp
DirectXWork/Demo02_DXHelloTriangle/Source/DXWorkHelloTriangle/: D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  HelloTriangle.hlsl  IMGuiHelloTriangle.cpp  IMGuiHelloTriangle.h
DirectXWork/Demo03_DXHelloCube/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo03_DXHelloCube/Source/: Main.cpp
DirectXWork/Demo03_DXHelloCube/Source/DXWorkHelloCube/: D3D12HelloCube.cpp  IMGuiHelloCube.cpp
DirectXWork/Demo04_DXHelloShapes/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo04_DXHelloShapes/Source/: Main.cpp  stdafx.h
DirectXWork/Demo04_DXHelloShapes/Source/DXHelloShapes/: D3D12HelloShapes.cpp  D3D12HelloShapes.h  FrameResource.cpp  FrameResource.h  HelloShapesFrameResource.cpp  HelloShapesFrameResource.h  HelloShapesRenderItem.cpp  HelloShapesRenderItem.h  IMGuiHelloShapes.cpp  IMGuiHelloShapes.h  RenderItem.cpp  RenderItem.h
DirectXWork/Demo05_DXLandAndWaves/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo05_DXLandAndWaves/Source/: Main.cpp
DirectXWork/Demo05_DXLandAndWaves/Source/DXWorkLandAndWaves/: D3D12LandAndWaves.cpp  D3D12LandAndWaves.h  IMGuiLandAndWaves.cpp  IMGuiLandAndWaves.h  LandAndWaves.hlsl  LandAndWavesFrameResource.cpp  LandAndWavesFrameResource.h  LandAndWavesRenderItem.cpp  LandAndWavesRenderItem.h  Wave.cpp  Wave.h
DirectXWork/Demo06_DXHelloLighting/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo06_DXHelloLighting/Source/: Main.cpp
DirectXWork/Demo06_DXHelloLighting/Source/DXWorkHelloLighting/: DXHelloLighting.cpp  DXHelloLighting.h  HelloLighting.hlsl  HelloLightingFrameResource.cpp  HelloLightingFrameResource.h  HelloLightingRenderItem.cpp  HelloLightingRenderItem.h  IMGuiHelloLighting.cpp  IMGuiHelloLighting.h  LightingUtil.hlsl
DirectXWork/Demo07_DXHelloTexture/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo07_DXHelloTexture/Source/: Main.cpp
DirectXWork/Demo07_DXHelloTexture/Source/DXWorkHelloTexture/: DXHelloTexture.cpp  DXHelloTexture.h  HelloTexture.hlsl  HelloTextureFrameResource.cpp  HelloTextureFrameResource.h  HelloTextureRenderItem.h  IMGuiHelloTexture.cpp  IMGuiHelloTexture.h  LightingUtil.hlsl
DirectXWork/Demo07_DXLandAndWavesWithLighting/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo07_DXLandAndWavesWithLighting/Source/: Main.cpp
DirectXWork/Demo07_DXLandAndWavesWithLighting/Source/DXWorkLandAndWavesWithLighting/: IMGuiLandAndWavesWithLighting.cpp  IMGuiLandAndWavesWithLighting.h  LandAndWavesWithLighting.cpp  LandAndWavesWithLighting.h
DirectXWork/Demo08_DXWavesWithBlend/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo08_DXWavesWithBlend/Source/: Main.cpp  stdafx.h
DirectXWork/Demo08_DXWavesWithBlend/Source/DXWorkBlend/: DXWavesWithBlend.cpp  DXWavesWithBlend.h  IMGuiWavesWithBlend.cpp  IMGuiWavesWithBlend.h  Lighting.hlsl  Wave.cpp  Wave.h  WavesWithBlend.hlsl  WavesWithBlendFrameResource.cpp  WavesWithBlendFrameResource.h  WavesWithBlendRenderItem.h
DirectXWork/Demo09_DXHelloStenciling/: CMakeLists.txt  ReadMe.md
DirectXWork/Demo09_DXHelloStenciling/Source/: Main.cpp
DirectXWork/Demo09_DXHelloStenciling/Source/DXWorkStenciling/: DXHelloStenciling.cpp  DXHelloStenciling.h  HelloStenciling.hlsl  HelloStencilingFrameResource.cpp  HelloStencilingFrameResource.h  HelloStencilingRenderItem.h  IMGuiHelloStenciling.cpp  IMGuiHelloStenciling.h  Lighting.hlsl
DirectXWork/Demo10_DXHelloGeometryShader/: CMakeLists.txt
DirectXWork/Demo10_DXHelloGeometryShader/Source/: Main.cpp
DirectXWork/Demo10_DXHelloGeometryShader/Source/DXWorkGeometryShader/: DXHelloGeometryShader.cpp  DXHelloGeometryShader.h  IMGuiHelloGeometryShader.cpp  IMGuiHelloGeometryShader.h
DirectXWork/Demo11_DXReview/: CMakeLists.txt
DirectXWork/Demo11_DXReview/Source/: DXReviewEntry.hlsl  DXSampleForReview.cpp  DXSampleForReview.h  DemoRenderItem.cpp  DemoRenderItem.h  GeometryGenerator.cpp  GeometryGenerator.h  IMGuiCtrlForReview.cpp  IMGuiCtrlForReview.h  Lighting.hlsl  Main.cpp  Timer.cpp  Timer.h  UploadBuffer.h  Utils.cpp  Utils.h  WinApplication.cpp  WinApplication.h  stdafx.h
DirectXWork/Lib_DXBaseApp/: CMakeLists.txt  ReadMe.md
DirectXWork/Lib_DXBaseApp/Source/: stdafx.h
DirectXWork/Lib_DXBaseApp/Source/Application/: GameTimer.cpp  GameTimer.h  Win32Application.cpp  Win32Application.h
DirectXWork/Lib_DXBaseApp/Source/DXWork/: DXBaseWork.cpp  DXBaseWork.h
DirectXWork/Lib_DXBaseApp/Source/DearIMGuiHelper/: DearIMGuiBaseHelper.cpp  DearIMGuiBaseHelper.h
DirectXWork/Lib_DXBaseApp/Source/DirectXBaseWork/: D3D12Util.cpp  D3D12Util.h  DirectXBaseWork.cpp  DirectXBaseWork.h  GeometryGenerator.cpp  GeometryGenerator.h  MathUtil.cpp  MathUtil.h  RenderConstantsStruct.h  UploadBuffer.h
Source/: Main.cpp  stdafx.h
Source/Application/: Win32Application.cpp  Win32Application.h
Source/DXWork/: DXBaseWork.cpp  DXBaseWork.h
Source/DXWorkHelloWindow/: D3D12HelloWindow.cpp  D3D12HelloWindow.h
ThirdParts/DearIMGui/: CMakeLists.txt
